--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,60 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "max games = 5\n",
-      "min games to win 3\n",
-      "\n",
-      "\n",
-      "Enter 'rock', 'paper' or 'scissors': paper\n",
-      "Game # 1 \n",
-      "player: paper \n",
-      "machine: rock\n",
-      "player wins\n",
-      "machineWins: 0 playerWins: 1\n",
-      "\n",
-      "\n",
-      "Enter 'rock', 'paper' or 'scissors': rock\n",
-      "Game # 2 \n",
-      "player: rock \n",
-      "machine: rock\n",
-      "tie\n",
-      "machineWins: 0 playerWins: 1\n",
-      "\n",
-      "\n",
-      "Enter 'rock', 'paper' or 'scissors': paper\n",
-      "Game # 3 \n",
-      "player: paper \n",
-      "machine: rock\n",
-      "player wins\n",
-      "machineWins: 0 playerWins: 2\n",
-      "\n",
-      "\n",
-      "Enter 'rock', 'paper' or 'scissors': scissors\n",
-      "Game # 4 \n",
-      "player: scissors \n",
-      "machine: scissors\n",
-      "tie\n",
-      "machineWins: 0 playerWins: 2\n",
-      "\n",
-      "\n",
-      "Enter 'rock', 'paper' or 'scissors': scissors\n",
-      "Game # 5 \n",
-      "player: scissors \n",
-      "machine: rock\n",
-      "machine wins\n",
-      "machineWins: 1 playerWins: 2\n",
-      "\n",
-      "Not enough wins from either side\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
@@ -86,6 +35,8 @@
     "\n",
     "# Assign to a list the 3 possible options: 'rock', 'paper' or 'scissors'.\n",
     "options = ['rock', 'paper', 'scissors']\n",
+    "\n",
+    "# move in out[i][0] wins over move in out[i][1]\n",
     "out = [('rock', 'scissors'), ('paper', 'rock'), ('scissors', 'paper')]    \n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
@@ -149,7 +100,7 @@
     "gameNum = 1\n",
     "\n",
     "\n",
-    "while (gameNum <= maxGames) and ((machineWins < gamesToWin) and (playerWins < gamesToWin)):\n",
+    "while (gameNum <= maxGames) and (machineWins < gamesToWin) and (playerWins < gamesToWin):\n",
     "    print('\\n')\n",
     "    playerMove = playerChoice(options)\n",
     "    machineMove = machineChoice(options)\n",
@@ -160,7 +111,7 @@
     "    elif combatOutcome == 2:\n",
     "        playerWins +=1\n",
     "    gameNum +=1\n",
-    "    print('machineWins:', machineWins, 'playerWins:', playerWins)\n",
+    "    print('machine # of wins:', machineWins, 'player # of wins:', playerWins)\n",
     "\n",
     "\n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
@@ -206,61 +157,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter max number of games (number should be odd): 8\n",
-      "Enter max number of games (number should be odd): 7\n",
-      "min games to win 4\n",
+      "Enter max number of games (number should be odd): 5\n",
+      "min games to win 3\n",
       "\n",
       "\n",
-      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': roc\n",
-      "Please check your spelling\n",
-      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': rock\n",
+      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': spock\n",
       "Game # 1 \n",
-      "player: rock \n",
-      "machine: spock\n",
-      "machine wins\n",
-      "machineWins: 1 playerWins: 0\n",
+      "player: spock \n",
+      "machine: rock\n",
+      "player wins\n",
+      "machine # of wins: 0 player # of wins: 1\n",
       "\n",
       "\n",
       "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': rock\n",
       "Game # 2 \n",
       "player: rock \n",
-      "machine: spock\n",
-      "machine wins\n",
-      "machineWins: 2 playerWins: 0\n",
+      "machine: rock\n",
+      "tie\n",
+      "machine # of wins: 0 player # of wins: 1\n",
       "\n",
       "\n",
-      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': spock\n",
+      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': lizard\n",
       "Game # 3 \n",
-      "player: spock \n",
-      "machine: lizard\n",
+      "player: lizard \n",
+      "machine: rock\n",
       "machine wins\n",
-      "machineWins: 3 playerWins: 0\n",
+      "machine # of wins: 1 player # of wins: 1\n",
       "\n",
       "\n",
       "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': spock\n",
       "Game # 4 \n",
       "player: spock \n",
-      "machine: spock\n",
-      "tie\n",
-      "machineWins: 3 playerWins: 0\n",
-      "\n",
-      "\n",
-      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': lizard\n",
-      "Game # 5 \n",
-      "player: lizard \n",
-      "machine: lizard\n",
-      "tie\n",
-      "machineWins: 3 playerWins: 0\n",
+      "machine: paper\n",
+      "machine wins\n",
+      "machine # of wins: 2 player # of wins: 1\n",
       "\n",
       "\n",
       "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': paper\n",
-      "Game # 6 \n",
+      "Game # 5 \n",
       "player: paper \n",
-      "machine: lizard\n",
-      "machine wins\n",
-      "machineWins: 4 playerWins: 0\n",
+      "machine: spock\n",
+      "player wins\n",
+      "machine # of wins: 2 player # of wins: 2\n",
       "\n",
-      "Machine prevailed\n"
+      "It was a tie\n"
      ]
     }
    ],
@@ -281,9 +221,12 @@
     "# Assign a list of 5 possible options.\n",
     "options = ['rock', 'paper', 'scissors', 'lizard', 'spock']\n",
     "\n",
-    "out = [('rock', 'scissors'), ('paper', 'rock'), ('scissors', 'paper'), ('rock', 'lizard'),\n",
-    "       ('lizard', 'spock'), ('spock', 'scissors'), ('scissors', 'lizard'), ('lizard', 'paper'), \n",
-    "       ('paper', 'spock'), ('spock', 'rock')]\n",
+    "# move in out[i][0] wins over move in out[i][1]\n",
+    "out = [('rock', 'scissors'), ('rock', 'lizard'), \n",
+    "       ('paper', 'rock'), ('paper', 'spock'), \n",
+    "       ('scissors', 'paper'), ('scissors', 'lizard'), \n",
+    "       ('lizard', 'spock'), ('lizard', 'paper'), \n",
+    "       ('spock', 'rock'), ('spock', 'scissors')]\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "# This time the previously defined function is used\n",
@@ -346,7 +289,7 @@
     "# that accumulate the wins of each participant.\n",
     "gameNum = 1\n",
     "\n",
-    "while (gameNum <= maxGames) and ((machineWins < gamesToWin) and (playerWins < gamesToWin)):\n",
+    "while (gameNum <= maxGames) and (machineWins < gamesToWin) and (playerWins < gamesToWin):\n",
     "    print('\\n')\n",
     "    playerMove = playerChoice(options)\n",
     "    machineMove = machineChoice(options)\n",
@@ -357,7 +300,7 @@
     "    elif combatOutcome == 2:\n",
     "        playerWins +=1\n",
     "    gameNum +=1\n",
-    "    print('machineWins:', machineWins, 'playerWins:', playerWins)\n",
+    "    print('machine # of wins:', machineWins, 'player # of wins:', playerWins)\n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
     "if machineWins >=gamesToWin:\n",
@@ -369,11 +312,6 @@
     "else:\n",
     "    print('\\nNot enough wins from either side')"
    ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
