--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -33,43 +33,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assign spell power lists to variables\n",
     "\n",
     "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
-    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]"
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 16]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign 0 to each variable that stores the victories\n"
+    "# Assign 0 to each variable that stores the victories\n",
+    "gandalf_victories= 0\n",
+    "saruman_victories = 0 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Execution of spell clashes\n"
+    "# Execution of spell clashes\n",
+    "gandalf[0] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gandalf_victories 6\n"
+     ]
+    }
+   ],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
     "# Print the result based on the winner.\n",
-    "\n"
+    "\n",
+    "for i in range(len(gandalf)):\n",
+    "    if gandalf[i] > saruman[i]:\n",
+    "        #print ('round {} for Gandalf' .format(i))  \n",
+    "        gandalf_victories = gandalf_victories + 1\n",
+    "        #print ('gandalf_victories = {} '.format(gandalf_victories))\n",
+    "    elif gandalf[i] < saruman[i]: \n",
+    "        saruman_victories = saruman_victories + 1\n",
+    "        #print ('saruman_victories = {} '.format(saruman_victories))\n",
+    "\n",
+    "if gandalf_victories > saruman_victories: \n",
+    "    print(\"Gandalf wins with \",gandalf_victories)\n",
+    "elif gandalf_victories < saruman_victories: \n",
+    "    print(\"Saruman wins with \",saruman_victories)\n",
+    "else: print(\"It's a tie!\")\n",
+    "    "
    ]
   },
   {
@@ -210,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
