finished duel lab

--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,51 +176,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "gandalf [50, 40, 40, 10, 50, 10, 40, 50, 10, 50]\n",
+      "saruman [45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign spell power lists to variables\n",
-    "\n"
+    "POWER.get('Fireball')\n",
+    "\n",
+    "print(POWER.get(str(gandalf[0])))\n",
+    "\n",
+    "for i in range(len(gandalf)):\n",
+    "    gandalf[i] = POWER.get(str(gandalf[i]))  \n",
+    "    saruman[i] = POWER.get(saruman[i])\n",
+    "    \n",
+    "print(\"gandalf\" , gandalf)\n",
+    "print(\"saruman\" , saruman)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Gandalf', 'Saruman', 'Gandalf', 'Saruman', 'Gandalf', 'Saruman', 'Gandalf', 'Gandalf', 'Gandalf']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'The definite winner is Gandalf'"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
     "\n",
     "\n",
     "# Execution of spell clashes\n",
+    "def spell_clashes(gandalf,saruman):\n",
     "\n",
+    "    gandalf_victories = 0\n",
+    "    saruman_victories = 0\n",
+    "    victories= []\n",
+    "    \n",
+    "    for i in range(len(gandalf)):\n",
+    "        if gandalf[i] > saruman[i]:\n",
+    "            #print ('round {} for Gandalf' .format(i))  \n",
+    "            #gandalf_victories = gandalf_victories + 1\n",
+    "            victories.append('Gandalf')\n",
+    "            #print ('gandalf_victories = {} '.format(gandalf_victories))\n",
+    "        elif gandalf[i] < saruman[i]: \n",
+    "            #saruman_victories = saruman_victories + 1\n",
+    "            victories.append('Saruman')\n",
+    "            #print ('saruman_victories = {} '.format(saruman_victories))\n",
+    "    return victories\n",
     "\n",
+    "print(spell_clashes(gandalf,saruman))\n",
     "\n",
     "# check for 3 wins in a row\n",
-    "\n",
-    "\n",
-    "# check the winner\n"
+    "def check_for_wins(list_wins):\n",
+    "    for i in range(len(list_wins)):\n",
+    "        if list_wins[i] == list_wins[i+1] and list_wins[i] == list_wins[i+2]:\n",
+    "            return 'The definite winner is ' + list_wins[i]\n",
+    "        else : wins = 'No 3-in-a-row winners!'\n",
+    "    \n",
+    "    return wins \n",
+    "# check the winner\n",
+    "check_for_wins(spell_clashes(gandalf,saruman))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Average of each of the spell lists.\n",
-    "\n"
+    "\n",
+    "# Method 1\n",
+    "avg_1 = sum(gandalf)/len(gandalf)\n",
+    "avg_2 = sum(saruman)/len(gandalf)\n",
+    "\n",
+    "# Method 2: Reduce & Lambda\n",
+    "from functools import reduce\n",
+    "  \n",
+    "def Average(lst): \n",
+    "    return reduce(lambda a, b: a + b, lst) / len(lst)  \n",
+    "  \n",
+    "avg_3 = Average(gandalf)\n",
+    "avg_4 = Average(saruman)\n",
+    "\n",
+    "#Method 3: Using mean from statistics\n",
+    "\n",
+    "from statistics import mean \n",
+    "  \n",
+    "def Average(lst): \n",
+    "    return mean(lst) \n",
+    "  \n",
+    "\n",
+    "avg_5 = Average(gandalf)\n",
+    "\n",
+    "print(avg_5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standard Deviation 17.795130420052185 \n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Standard deviation of each of the spell lists.\n",
-    "\n"
+    "\n",
+    "import statistics \n",
+    "  \n",
+    "# Prints standard deviation \n",
+    "print(\"Standard Deviation % s \" \n",
+    "                % (statistics.stdev(gandalf))) \n"
    ]
   },
   {
