--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -32,60 +32,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# variables\n",
-    "\n"
+    "pass_in = (4,3,5,7)\n",
+    "pass_out = (1,2,3,7)\n",
+    "max_pass = max(len(pass_in),len(pass_out))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(4, 1), (3, 2), (5, 3), (7, 7)]\n",
+      "the number of stops is 4\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Calculate the number of stops.\n",
-    "\n"
+    "\n",
+    "max_pass = max(len(pass_in),len(pass_out))\n",
+    "\n",
+    "# stops = [(in1, out1), (in2, out2), (in3, out3), (in4, out4)]\n",
+    "stops=[]\n",
+    "\n",
+    "for i in range(len(pass_in)):\n",
+    "    stops.append((pass_in[i],pass_out[i]))\n",
+    "\n",
+    "print(stops)\n",
+    "print(\"the number of stops is {}\" .format(len(stops)))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 1, 2, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
+    "# 2. Assign to a variable a list whose elements are the number of passengers at each stop (in-out),\n",
     "# Each item depends on the previous item in the list + in - out.\n",
-    "\n"
+    "\n",
+    "list_in_out = []\n",
+    "for i in range(len(stops)):\n",
+    "    list_in_out.append((stops[i][0]-stops[i][1]))\n",
+    "    \n",
+    "print(list_in_out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Find the maximum occupation of the bus.\n",
-    "\n"
+    "max_occupation = max(list_in_out)\n",
+    "\n",
+    "print(max_occupation)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standard Deviation of the occupation of bus is 1.2909944487358056\n",
+      "Standard Deviation of the occupation of bus is 1.5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[3, 1, 2, 0]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 4. Calculate the average occupation. And the standard deviation.\n",
-    "\n"
+    "import statistics \n",
+    "from statistics import mean \n",
+    "\n",
+    "print(\"Standard Deviation of the occupation of bus is {}\" .format(statistics.stdev(list_in_out)))\n",
+    "print(\"Standard Deviation of the occupation of bus is {}\" .format(mean(list_in_out)))\n",
+    "list_in_out"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
@@ -105,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
