--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -101,33 +101,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "83\n",
+      "[76, 80, 80, 83, 79]\n",
+      "The mean temperature throughout the day is 58.83\n",
+      "[91.4, 150.8, 149.0, 137.9, 138.2, 140.0, 143.6, 147.2, 158.0, 168.8, 176.0, 156.2, 176.0, 181.4, 154.4, 174.2, 141.8, 127.4, 122.0, 120.2, 127.4, 118.4, 113.0, 102.2]\n"
+     ]
+    }
+   ],
    "source": [
     "# assign a variable to the list of temperatures\n",
+    "temperatures_C = [33,66,65,0,59,60,62,64,70,76,80,69,80,83,68,79,61,53,50,49,53,48,45,39]\n",
     "\n",
     "# 1. Calculate the minimum of the list and print the value using print()\n",
     "\n",
+    "min_temp = min(temperatures_C)\n",
+    "print(min_temp)\n",
     "\n",
     "# 2. Calculate the maximum of the list and print the value using print()\n",
     "\n",
+    "max_temp = max(temperatures_C)\n",
+    "print(max_temp)\n",
     "\n",
     "# 3. Items in the list that are greater than 70ºC and print the result\n",
     "\n",
+    "greater_than_70 = []\n",
+    "\n",
+    "for i in range(len(temperatures_C)):\n",
+    "    if temperatures_C[i] > 70:\n",
+    "        greater_than_70.append(temperatures_C[i])\n",
+    "\n",
+    "print(greater_than_70)\n",
+    "\n",
     "\n",
     "# 4. Calculate the mean temperature throughout the day and print the result\n",
+    "import statistics\n",
+    "from statistics import mean\n",
+    "\n",
+    "mean_temp = statistics.mean(temperatures_C)\n",
+    "\n",
+    "print(\"The mean temperature throughout the day is {}\" .format(round(mean_temp,2)))\n",
     "\n",
     "\n",
     "# 5.1 Solve the fault in the sensor by estimating a value\n",
     "\n",
-    "\n",
     "# 5.2 Update of the estimated value at 03:00 on the list\n",
-    "\n",
-    "\n",
+    "      \n",
+    "temperatures_C[3] = mean_temp\n",
     "\n",
     "# Bonus: convert the list of ºC to ºFarenheit\n",
-    "\n"
+    "      #formula: F = C *1.8 + 32 \n",
+    "i=0\n",
+    "temperatures_F = []\n",
+    "      \n",
+    "for i in range(len(temperatures_C)):\n",
+    "      temperatures_F.append(round(temperatures_C[i] * 1.8 + 32 , 2 ))\n",
+    "\n",
+    "print (temperatures_F)"
    ]
   },
   {
@@ -144,12 +181,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Print True or False depending on whether you would change the cooling system or not\n",
-    "\n"
+    "import statistics\n",
+    "from statistics import mean\n",
+    "\n",
+    "\n",
+    "def change_cooling_sys(list_temp):\n",
+    "    \n",
+    "    mean_temp = statistics.mean(list_temp)\n",
+    "    greater_than_70 = []\n",
+    "    greater_than_80 = []\n",
+    "\n",
+    "    for i in range(len(list_temp)):\n",
+    "        if list_temp[i] > 70:\n",
+    "            greater_than_70.append(list_temp[i])\n",
+    "    \n",
+    "    for i in range(len(list_temp)):\n",
+    "        if list_temp[i] > 80:\n",
+    "            greater_than_80.append(list_temp[i])\n",
+    "\n",
+    "    if mean_temp > 65 or len(greater_than_70) > 4 or len(greater_than_80) != 0:\n",
+    "        return True\n",
+    "\n",
+    "    \n",
+    "print(change_cooling_sys(temperatures_C))"
    ]
   },
   {
@@ -227,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
