--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -32,12 +32,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of stops is 9\n",
+      "The number of passengers at each stop: [10, 3, -2, -1, 4, -4, -3, -2, -1]\n",
+      "Maximum occupation of the bus is 14 passengers\n",
+      "Passengers in the bus: [10, 13, 11, 10, 14, 10, 7, 5, 4]\n",
+      "The average occupation is 9.333333333333334\n",
+      "The standart deviation is 3.391164991562634\n"
+     ]
+    }
+   ],
    "source": [
     "# variables\n",
-    "\n"
+    "import math\n",
+    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8 ), (4, 6), (2, 3)]\n",
+    "print('The number of stops is', len(stops))\n",
+    "passengers = []\n",
+    "for i in range(len(stops)):\n",
+    "    n = stops[i][0] - stops[i][1]\n",
+    "    passengers.append(n)\n",
+    "print('The number of passengers at each stop:', passengers)\n",
+    "maximum = 0\n",
+    "summ = 0\n",
+    "passengers_list = []\n",
+    "for j in range(len(passengers)):\n",
+    "    summ += passengers[j]\n",
+    "    passengers_list.append(summ)\n",
+    "    if summ > maximum:\n",
+    "        maximum = summ\n",
+    "print('Maximum occupation of the bus is {0} passengers'.format(maximum))\n",
+    "all_passengers = 0\n",
+    "for k in range(len(passengers_list)):\n",
+    "    all_passengers += passengers_list[k]\n",
+    "average = all_passengers/len(passengers)\n",
+    "print('Passengers in the bus:', passengers_list)\n",
+    "print('The average occupation is', average)\n",
+    "numerator = 0\n",
+    "for n in range(len(passengers_list)):\n",
+    "    numerator += (passengers_list[n] - average)**2\n",
+    "s2 = numerator/(len(passengers_list) - 1)\n",
+    "print('The standart deviation is', math.sqrt(s2))"
    ]
   },
   {
@@ -105,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
