--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -43,16 +43,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1 have 11 arrows,\n",
+      "Q2 have 6 arrows,\n",
+      "Q3 have 2 arrows,\n",
+      "Q4 have 3 arrows\n",
+      "All distances from the center are:\n",
+      " [6.4031242374328485, 2.0, 8.06225774829855, 3.1622776601683795, 3.605551275463989, 6.4031242374328485, 3.605551275463989, 8.602325267042627, 8.602325267042627, 2.8284271247461903, 6.4031242374328485, 2.0, 8.06225774829855, 3.1622776601683795, 3.605551275463989, 6.4031242374328485, 3.605551275463989, 8.602325267042627, 8.602325267042627, 2.8284271247461903, 12.727922061357855, 12.041594578792296]\n",
+      "The shortest distance is 2.0\n",
+      "2 arrows fly away...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'a = -0\\nprint(a)\\nprint(a*2)\\nprint(0 == -0)\\nprint(-0/5)'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Variables\n",
-    "\n",
+    "import math\n",
     "points = [(4, 5), (-0, 2), (4, 7), (1, -3), (3, -2), (4, 5),\n",
     "          (3, 2), (5, 7), (-5, 7), (2, 2), (-4, 5), (0, -2),\n",
     "          (-4, 7), (-1, 3), (-3, 2), (-4, -5), (-3, 2),\n",
-    "          (5, 7), (5, 7), (2, 2), (9, 9), (-8, -9)]"
+    "          (5, 7), (5, 7), (2, 2), (9, 9), (-8, -9)]\n",
+    "q1, q2, q3, q4 = 0, 0, 0, 0\n",
+    "for i in range(len(points)):\n",
+    "    if points[i][0] >= 0 and points[i][1] >= 0:\n",
+    "        q1 += 1\n",
+    "    elif points[i][0] < 0 and points[i][1] < 0:\n",
+    "        q3 += 1\n",
+    "    elif points[i][0] >= 0 and points[i][1] < 0:\n",
+    "        q4 += 1\n",
+    "    else:\n",
+    "        q2 += 1\n",
+    "print('Q1 have {0} arrows,\\nQ2 have {1} arrows,\\nQ3 have {2} arrows,\\nQ4 have {3} arrows'.format(q1, q2, q3, q4))\n",
+    "minimum = True\n",
+    "lengths = []\n",
+    "for j in range(len(points)):\n",
+    "    d = math.sqrt((points[j][0])**2 + (points[j][1])**2)\n",
+    "    lengths.append(d)\n",
+    "print('All distances from the center are:\\n', lengths)\n",
+    "print('The shortest distance is', min(lengths))\n",
+    "number = 0\n",
+    "for k in range(len(lengths)):\n",
+    "    if lengths[k] > 9:\n",
+    "        number += 1\n",
+    "print(number, 'arrows fly away...')\n",
+    "\n",
+    "'''a = -0\n",
+    "print(a)\n",
+    "print(a*2)\n",
+    "print(0 == -0)\n",
+    "print(-0/5)'''"
    ]
   },
   {
@@ -121,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
