--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,21 +20,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days =  11\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
-    "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
-    "\n",
     "# Write the code that solves the problem\n",
-    "\n",
-    "\n",
-    "# Print the result with print('Days =', days)\n"
+    "# Print the result with print('Days =', days)\n",
+    "well_height = 125\n",
+    "daily_advance = 30\n",
+    "night_retreat = -20\n",
+    "accumulated_distance = 0\n",
+    "days = 0\n",
+    "while accumulated_distance <= well_height:\n",
+    "    if days == 0:\n",
+    "        days += 1\n",
+    "        accumulated_distance += daily_advance\n",
+    "    else:\n",
+    "        days += 1\n",
+    "        accumulated_distance += daily_advance + night_retreat\n",
+    "        #print('days = {0}, distance = {1}'.format(days, accumulated_distance))\n",
+    "print('Days = ', days)\n"
    ]
   },
   {
@@ -104,6 +120,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -122,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
