--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
+    "well_height = 125\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
     "\n",
@@ -122,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
