--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,21 +20,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The snail escaped after  11 days\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
     "well_height = 125\n",
+    "daily_advance = 30\n",
+    "night_retreat = 20\n",
+    "snailNotEscapeYet = True\n",
+    "distance_with_nights = well_height - daily_advance\n",
+    "\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
+    "days_nights = 0\n",
+    "accumulated_distance =0\n",
     "\n",
     "# Write the code that solves the problem\n",
+    "while snailNotEscapeYet:\n",
+    "    accumulated_distance += daily_advance - night_retreat\n",
+    "    days_nights += 1\n",
+    "    if accumulated_distance >= distance_with_nights:\n",
+    "        snailNotEscapeYet = False\n",
+    "\n",
+    "days = days_nights +1\n",
     "\n",
     "\n",
-    "# Print the result with print('Days =', days)\n"
+    "# Print the result with print('Days =', days)\n",
+    "print(\"The snail escaped after \", days , \"days\")"
    ]
   },
   {
