missing exercises temp and rock paper

--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,26 +20,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On day 1 , the snake is -115 from the ground\n",
-      "On day 2 , the snake is -105 from the ground\n",
-      "On day 3 , the snake is -95 from the ground\n",
-      "On day 4 , the snake is -85 from the ground\n",
-      "On day 5 , the snake is -75 from the ground\n",
-      "On day 6 , the snake is -65 from the ground\n",
-      "On day 7 , the snake is -55 from the ground\n",
-      "On day 8 , the snake is -45 from the ground\n",
-      "On day 9 , the snake is -35 from the ground\n",
-      "On day 10 , the snake is -25 from the ground\n",
-      "On day 11 , the snake is -15 from the ground\n",
-      "On day 12 , the snake is -5 from the ground\n",
-      "On day 13 , the snake is 5 from the ground\n"
+      "On day 1 the snail is 10 from the ground\n",
+      "On day 2 the snail is 20 from the ground\n",
+      "On day 3 the snail is 30 from the ground\n",
+      "On day 4 the snail is 40 from the ground\n",
+      "On day 5 the snail is 50 from the ground\n",
+      "On day 6 the snail is 60 from the ground\n",
+      "On day 7 the snail is 70 from the ground\n",
+      "On day 8 the snail is 80 from the ground\n",
+      "On day 9 the snail is 90 from the ground\n",
+      "On day 10 the snail is 100 from the ground\n",
+      "On day 11 the snail is 110 from the ground\n",
+      "On day 12 the snail is 120 from the ground\n",
+      "On day 13 the snail is 130 from the ground\n"
      ]
     }
    ],
@@ -47,10 +47,10 @@
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
     "\n",
-    "distance_ground = -125\n",
+    "well_height = 125\n",
     "day_rise = 30\n",
     "night_fall = -20\n",
-    "\n",
+    "accumulated_distance = 0\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
     "\n",
@@ -58,11 +58,10 @@
     "\n",
     "# Write the code that solves the problem\n",
     "\n",
-    "while distance_ground < 0:\n",
-    "    distance_ground = distance_ground + day_rise + night_fall\n",
+    "while accumulated_distance < well_height:\n",
+    "    accumulated_distance += (day_rise + night_fall)\n",
     "    days += 1\n",
-    "    print(\"On day {} , the snake is {} from the ground\" .format(days,distance_ground))\n",
-    "    \n",
+    "    print(\"On day\", days , \"the snail is\", accumulated_distance,\"from the ground\")\n",
     "\n",
     "# Print the result with print('Days =', days)\n"
    ]
@@ -99,68 +98,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On day 1 , the snake is -95 from the ground\n",
-      "On day 2 , the snake is -74 from the ground\n",
-      "On day 3 , the snake is -41 from the ground\n",
-      "On day 4 , the snake is 36 from the ground\n",
-      "[9, -12, -44, 33]\n"
+      "On day 1 the snake is 30 from the ground\n",
+      "On day 2 the snake is 51 from the ground\n",
+      "On day 3 the snake is 84 from the ground\n",
+      "On day 4 the snake is 161 from the ground\n",
+      "77 12 38.09090909090909 17.996969441850734\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-3.5"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
     "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
-    "distance_ground = -125\n",
+    "accumulated_distance = 0\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
     "\n",
+    "days = 0\n",
     "\n",
     "# Write the code that solves the problem\n",
     "\n",
     "displacement = []\n",
+    "while accumulated_distance < well_height:\n",
+    "    accumulated_distance += advance_cm[days]\n",
+    "    days += 1\n",
+    "\n",
     "\n",
     "# Print the result with print('Days =', days)\n",
-    "days = 0\n",
-    "while distance_ground < 0:\n",
-    "    distance_ground += advance_cm[days]\n",
-    "    displacement.append(advance_cm[days]-advance_cm[days+1])\n",
-    "    days += 1\n",
-    "    print(\"On day {} , the snake is {} from the ground\" .format(days,distance_ground))\n",
+    "\n",
+    "    \n",
+    "    print(\"On day\", days ,\"the snake is\", accumulated_distance, \"from the ground\")\n",
     "    \n",
     "    \n",
-    "print(displacement)\n",
     "\n",
     "\n",
     "# What is its maximum displacement in a day? And its minimum?\n",
-    "max_displacement = max(displacement)\n",
-    "min_displacement = min(displacement)\n",
+    "max_displacement = max(advance_cm)\n",
+    "min_displacement = min(advance_cm)\n",
     "\n",
     "# What is its average progress?\n",
-    "import statistics\n",
-    "from statistics import mean \n",
     "\n",
-    "statistics.mean(displacement)\n",
+    "average_prog = sum(advance_cm)/len(advance_cm)\n",
     "\n",
     "# What is the standard deviation of your displacement during the day?\n",
-    "\n"
+    "\n",
+    "from statistics import stdev\n",
+    "\n",
+    "std_advance = stdev(advance_cm)\n",
+    "\n",
+    "print(max_displacement, min_displacement, average_prog, std_advance)\n"
    ]
   },
   {
@@ -187,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
