--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -32,14 +32,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# variables\n",
-    "pass_in = (4,3,5,7)\n",
-    "pass_out = (1,2,3,7)\n",
-    "max_pass = max(len(pass_in),len(pass_out))"
+    "got_in = (2,5,4,6)\n",
+    "got_out = (1,3,3,6)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(2, 1), (5, 3), (4, 3), (6, 6)]\n",
+      "The number of stops is 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Calculate the number of stops.\n",
+    "\n",
+    "stops=[]\n",
+    "\n",
+    "for i in range(len(got_in)):\n",
+    "    stops.append((got_in[i],got_out[i]))\n",
+    "\n",
+    "print(stops)\n",
+    "print(\"The number of stops is\", len(stops))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Assign to a variable a list whose elements are the number of passengers at each stop (in-out),\n",
+    "# Each item depends on the previous item in the list + in - out.\n",
+    "\n",
+    "pasg_by_stop = []\n",
+    "\n",
+    "for i in range(len(got_in)):\n",
+    "    pasg_by_stop.append(stops[i][0]-stops[i][1])\n",
+    "    \n",
+    "print(pasg_by_stop)"
    ]
   },
   {
@@ -51,24 +101,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(4, 1), (3, 2), (5, 3), (7, 7)]\n",
-      "the number of stops is 4\n"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "# 1. Calculate the number of stops.\n",
+    "# 3. Find the maximum occupation of the bus.\n",
+    "max_pasg = max(pasg_by_stop)\n",
     "\n",
-    "max_pass = max(len(pass_in),len(pass_out))\n",
-    "\n",
-    "# stops = [(in1, out1), (in2, out2), (in3, out3), (in4, out4)]\n",
-    "stops=[]\n",
-    "\n",
-    "for i in range(len(pass_in)):\n",
-    "    stops.append((pass_in[i],pass_out[i]))\n",
-    "\n",
-    "print(stops)\n",
-    "print(\"the number of stops is {}\" .format(len(stops)))\n"
+    "print(max_pasg)\n"
    ]
   },
   {
@@ -80,73 +121,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 1, 2, 0]\n"
+      "Standard Deviation of the occupation of bus is 0.816496580927726\n",
+      "The average occupation of the bus is 1.0\n"
      ]
-    }
-   ],
-   "source": [
-    "# 2. Assign to a variable a list whose elements are the number of passengers at each stop (in-out),\n",
-    "# Each item depends on the previous item in the list + in - out.\n",
-    "\n",
-    "list_in_out = []\n",
-    "for i in range(len(stops)):\n",
-    "    list_in_out.append((stops[i][0]-stops[i][1]))\n",
-    "    \n",
-    "print(list_in_out)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 3. Find the maximum occupation of the bus.\n",
-    "max_occupation = max(list_in_out)\n",
-    "\n",
-    "print(max_occupation)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Standard Deviation of the occupation of bus is 1.2909944487358056\n",
-      "Standard Deviation of the occupation of bus is 1.5\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[3, 1, 2, 0]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# 4. Calculate the average occupation. And the standard deviation.\n",
-    "import statistics \n",
-    "from statistics import mean \n",
     "\n",
-    "print(\"Standard Deviation of the occupation of bus is {}\" .format(statistics.stdev(list_in_out)))\n",
-    "print(\"Standard Deviation of the occupation of bus is {}\" .format(mean(list_in_out)))\n",
-    "list_in_out"
+    "pasg_mean = sum(pasg_by_stop)/len(pasg_by_stop)\n",
+    "\n",
+    "import statistics \n",
+    "from statistics import stdev \n",
+    "\n",
+    "pasg_stdev = stdev(pasg_by_stop)\n",
+    "\n",
+    "print(\"Standard Deviation of the occupation of bus is\", pasg_stdev )\n",
+    "print(\"The average occupation of the bus is\", pasg_mean)\n"
    ]
   },
   {
@@ -171,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
