--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,57 +56,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Execution of spell clashes\n",
-    "gandalf[0] "
+    "for i in range(len(gandalf)):\n",
+    "    if gandalf[i] > saruman[i]:\n",
+    "        gandalf_victories += 1\n",
+    "    elif gandalf[i] < saruman[i]:\n",
+    "        saruman_victories += 1\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gandalf_victories 6\n"
+      "Gandalf wins 6 - 4\n"
      ]
     }
    ],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
     "# Print the result based on the winner.\n",
-    "\n",
-    "for i in range(len(gandalf)):\n",
-    "    if gandalf[i] > saruman[i]:\n",
-    "        #print ('round {} for Gandalf' .format(i))  \n",
-    "        gandalf_victories = gandalf_victories + 1\n",
-    "        #print ('gandalf_victories = {} '.format(gandalf_victories))\n",
-    "    elif gandalf[i] < saruman[i]: \n",
-    "        saruman_victories = saruman_victories + 1\n",
-    "        #print ('saruman_victories = {} '.format(saruman_victories))\n",
-    "\n",
-    "if gandalf_victories > saruman_victories: \n",
-    "    print(\"Gandalf wins with \",gandalf_victories)\n",
-    "elif gandalf_victories < saruman_victories: \n",
-    "    print(\"Saruman wins with \",saruman_victories)\n",
-    "else: print(\"It's a tie!\")\n",
-    "    "
+    "if gandalf_victories > saruman_victories:\n",
+    "    print (\"Gandalf wins\", gandalf_victories, \"-\", saruman_victories)\n",
+    "elif gandalf_victories < saruman_victories:\n",
+    "    print (\"Saruman wins\", saruman_victories, \"-\", gandalf_victories)\n",
+    "else:\n",
+    "    print (\"It's a tie!\")\n"
    ]
   },
   {
@@ -153,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,54 +160,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50\n",
-      "gandalf [50, 40, 40, 10, 50, 10, 40, 50, 10, 50]\n",
-      "saruman [45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n"
+      "gandalf power [50, 40, 40, 10, 50, 10, 40, 50, 10, 50]\n",
+      "saruman power [45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n"
      ]
     }
    ],
    "source": [
     "# Assign spell power lists to variables\n",
-    "POWER.get('Fireball')\n",
-    "\n",
-    "print(POWER.get(str(gandalf[0])))\n",
+    "power_gandalf = []\n",
+    "power_saruman = []\n",
     "\n",
     "for i in range(len(gandalf)):\n",
-    "    gandalf[i] = POWER.get(str(gandalf[i]))  \n",
-    "    saruman[i] = POWER.get(saruman[i])\n",
+    "    power_gandalf.append(POWER.get(gandalf[i]))\n",
+    "    power_saruman.append(POWER.get(saruman[i]))\n",
     "    \n",
-    "print(\"gandalf\" , gandalf)\n",
-    "print(\"saruman\" , saruman)\n"
+    "print(\"gandalf power\" , power_gandalf)\n",
+    "print(\"saruman power\" , power_saruman)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Gandalf', 'Saruman', 'Gandalf', 'Saruman', 'Gandalf', 'Saruman', 'Gandalf', 'Gandalf', 'Gandalf']\n"
+      "[1, 0, 1, 0, 1, 0, 1, 1, 1]\n",
+      "Gandalf Wins\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'The definite winner is Gandalf'"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -231,48 +204,49 @@
     "\n",
     "\n",
     "# Execution of spell clashes\n",
-    "def spell_clashes(gandalf,saruman):\n",
+    "gandalf_victories = []\n",
     "\n",
-    "    gandalf_victories = 0\n",
-    "    saruman_victories = 0\n",
-    "    victories= []\n",
     "    \n",
-    "    for i in range(len(gandalf)):\n",
-    "        if gandalf[i] > saruman[i]:\n",
-    "            #print ('round {} for Gandalf' .format(i))  \n",
-    "            #gandalf_victories = gandalf_victories + 1\n",
-    "            victories.append('Gandalf')\n",
-    "            #print ('gandalf_victories = {} '.format(gandalf_victories))\n",
-    "        elif gandalf[i] < saruman[i]: \n",
-    "            #saruman_victories = saruman_victories + 1\n",
-    "            victories.append('Saruman')\n",
-    "            #print ('saruman_victories = {} '.format(saruman_victories))\n",
-    "    return victories\n",
-    "\n",
-    "print(spell_clashes(gandalf,saruman))\n",
+    "for i in range(len(gandalf)):\n",
+    "    if power_gandalf[i] > power_saruman[i]:\n",
+    "            gandalf_victories.append(1)\n",
+    "    elif power_gandalf[i] < power_saruman[i]:\n",
+    "            gandalf_victories.append(0)\n",
+    "print (gandalf_victories)\n",
     "\n",
     "# check for 3 wins in a row\n",
-    "def check_for_wins(list_wins):\n",
-    "    for i in range(len(list_wins)):\n",
-    "        if list_wins[i] == list_wins[i+1] and list_wins[i] == list_wins[i+2]:\n",
-    "            return 'The definite winner is ' + list_wins[i]\n",
-    "        else : wins = 'No 3-in-a-row winners!'\n",
+    "three_sauroman = 0\n",
+    "\n",
+    "for i in range (len(gandalf_victories)):\n",
+    "\n",
+    "    if gandalf_victories[i] + gandalf_victories[i-1] == 0 and gandalf_victories[i] + gandalf_victories[i+1] == 0:\n",
+    "        three_sauroman = three_sauroman + 1\n",
+    "    else:\n",
+    "        three_sauroman= 0\n",
+    "\n",
     "    \n",
-    "    return wins \n",
     "# check the winner\n",
-    "check_for_wins(spell_clashes(gandalf,saruman))\n"
+    "if three_sauroman == 1:\n",
+    "    print (\"Sauroman Wins\")\n",
+    "else:\n",
+    "    print (\"Gandalf Wins\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35\n"
+      "35.0\n",
+      "30.5\n",
+      "35.0\n",
+      "30.5\n",
+      "35\n",
+      "30.5\n"
      ]
     }
    ],
@@ -280,41 +254,41 @@
     "# 3. Average of each of the spell lists.\n",
     "\n",
     "# Method 1\n",
-    "avg_1 = sum(gandalf)/len(gandalf)\n",
-    "avg_2 = sum(saruman)/len(gandalf)\n",
+    "avg_gandalf = sum(power_gandalf)/len(power_gandalf)\n",
+    "avg_saruman = sum(power_saruman)/len(power_gandalf)\n",
+    "\n",
+    "print (avg_gandalf)\n",
+    "print (avg_saruman)\n",
     "\n",
     "# Method 2: Reduce & Lambda\n",
     "from functools import reduce\n",
     "  \n",
-    "def Average(lst): \n",
-    "    return reduce(lambda a, b: a + b, lst) / len(lst)  \n",
-    "  \n",
-    "avg_3 = Average(gandalf)\n",
-    "avg_4 = Average(saruman)\n",
+    "redu_gand = reduce(lambda a, b: a + b, power_gandalf) / len(power_gandalf)  \n",
     "\n",
+    "redu_saru = reduce(lambda a, b: a + b, power_saruman) / len(power_gandalf) \n",
+    "\n",
+    "print (redu_gand)\n",
+    "print (redu_saru)\n",
     "#Method 3: Using mean from statistics\n",
     "\n",
     "from statistics import mean \n",
     "  \n",
-    "def Average(lst): \n",
-    "    return mean(lst) \n",
-    "  \n",
-    "\n",
-    "avg_5 = Average(gandalf)\n",
-    "\n",
-    "print(avg_5)"
+    "me_gand = mean(power_gandalf)\n",
+    "me_saru = mean(power_saruman)\n",
+    "print (me_gand)\n",
+    "print (me_saru)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Standard Deviation 17.795130420052185 \n"
+      "Standard Deviation = 17.795130420052185\n"
      ]
     }
    ],
@@ -324,8 +298,7 @@
     "import statistics \n",
     "  \n",
     "# Prints standard deviation \n",
-    "print(\"Standard Deviation % s \" \n",
-    "                % (statistics.stdev(gandalf))) \n"
+    "print(\"Standard Deviation =\", statistics.stdev(power_gandalf)) \n"
    ]
   },
   {
@@ -352,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
