--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,21 +57,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There were 4 arrows that hit another arrow. The coordinates are: {(4, 5), (5, 7), (-3, 2), (2, 2)}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2. Calculate how many arrows have fallen in each quadrant.\n",
+    "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
+    "\n",
+    "norm_arrow = set(points)\n",
+    "#print(norm_arrow)\n",
+    "arrow_arrow = {x for x in points if points.count(x)>1}\n",
+    "\n",
+    "print (\"There were\", len (arrow_arrow), \"arrows that hit another arrow. The coordinates are:\",arrow_arrow)\n",
     "\n"
    ]
   },
@@ -79,22 +83,102 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1st quadrant 11 2nd quandrant 6 3rd quadrant 3 4th quadrant 2\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3. Find the point closest to the center. Calculate its distance to the center\n",
-    "# Defining a function that calculates the distance to the center can help.\n",
-    "\n"
+    "# 2. Calculate how many arrows have fallen in each quadrant.\n",
+    "bullseye = []\n",
+    "first_q = []\n",
+    "second_q = []\n",
+    "third_q = []\n",
+    "fourth_q = []\n",
+    "\n",
+    "xcoord = []\n",
+    "ycoord = []\n",
+    "\n",
+    "for i in points:\n",
+    "    xcoord.append(i[0])\n",
+    "    ycoord.append(i[1])\n",
+    "\n",
+    "for i in range(len(xcoord)):\n",
+    "    if xcoord[i] >= 0 and ycoord[i] >= 0:\n",
+    "        first_q.append(i)\n",
+    "    elif xcoord[i] <= 0 and ycoord[i] <= 0:\n",
+    "        third_q.append(i)\n",
+    "    elif xcoord[i] >= 0 and ycoord[i] <= 0:\n",
+    "        fourth_q.append(i)\n",
+    "    elif xcoord[i] <= 0 and ycoord[i] >= 0:\n",
+    "        second_q.append(i)\n",
+    "    else: \n",
+    "        bullseye.append(i)\n",
+    "        \n",
+    "print(\"1st quadrant\",len(first_q),\"2nd quandrant\",len(second_q),\"3rd quadrant\",len(third_q),\"4th quadrant\",len(fourth_q))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The closest points to the center are: [(0, 2), (0, -2), (2, 2), (2, 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Find the point closest to the center. Calculate its distance to the center\n",
+    "# Defining a function that calculates the distance to the center can help.\n",
+    "import math\n",
+    "\n",
+    "def sClosest(shots, N): \n",
+    "  \n",
+    "    shots.sort(key = lambda N: math.sqrt(N[0]**2 + N[1]**2)) \n",
+    "  \n",
+    "    return shots[:N] \n",
+    "  \n",
+    "shots = points \n",
+    "\n",
+    "N = 4\n",
+    "\n",
+    "print(\"The closest points to the center are:\",sClosest(shots, N)) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of arrows in the forest is 2\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. If the target has a radius of 9, calculate the number of arrows that \n",
     "# must be picked up in the forest.\n",
-    "\n"
+    "inside = []\n",
+    "outside = []      \n",
+    "\n",
+    "for i in range(len(xcoord)):\n",
+    "    if ((xcoord[i] - 0)**2 + \n",
+    "        (ycoord[i] - 0)**2 <= 9**2): \n",
+    "        inside.append(i)\n",
+    "    else: \n",
+    "        outside.append(i)\n",
+    "print (\"The number of arrows in the forest is\",len(outside))"
    ]
   },
   {
@@ -121,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
