--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -37,16 +37,34 @@
    "outputs": [],
    "source": [
     "# variables\n",
-    "\n"
+    "p_in = [5,9,2,4,3]\n",
+    "p_out = [0,3,5,2,5]\n",
+    "\n",
+    "stops = []\n",
+    "for i in range (0,len(p_in)):\n",
+    "    stop=(p_in[i], p_out[i])\n",
+    "    stops.append(stop)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1. Calculate the number of stops.\n",
+    "len(stops)\n",
     "\n"
    ]
   },
@@ -58,27 +76,59 @@
    "source": [
     "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
     "# Each item depends on the previous item in the list + in - out.\n",
-    "\n"
+    "stocking = []\n",
+    "passengers = 0\n",
+    "for stop in stops:\n",
+    "    passengers = passengers + stop[0] - stop[1]\n",
+    "    stocking.append(passengers)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 3. Find the maximum occupation of the bus.\n",
-    "\n"
+    "max(stocking)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.4\n",
+      "2.0591260281974\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Calculate the average occupation. And the standard deviation.\n",
-    "\n"
+    "average_occupation = sum(stocking)/len(stocking)\n",
+    "print (average_occupation)\n",
+    "\n",
+    "squared_deviations=[]\n",
+    "for i in stocking:\n",
+    "    squared_deviation=(i - average_occupation)**2\n",
+    "    squared_deviations.append(squared_deviation)\n",
+    "standard_deviation = (sum(squared_deviations)/len(squared_deviations))**0.5\n",
+    "print(standard_deviation)\n"
    ]
   },
   {
@@ -105,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
