--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -49,7 +49,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign 0 to each variable that stores the victories\n"
+    "# Assign 0 to each variable that stores the victories\n",
+    "gandalf_victories=0\n",
+    "saruman_victories=0"
    ]
   },
   {
@@ -58,18 +60,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Execution of spell clashes\n"
+    "# Execution of spell clashes\n",
+    "spell_clashes=[]\n",
+    "for i in range(0,len(gandalf)):\n",
+    "    clash_result = gandalf[i] - saruman[i]\n",
+    "    spell_clashes.append(clash_result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins\n"
+     ]
+    }
+   ],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
     "# Print the result based on the winner.\n",
-    "\n"
+    "for i in spell_clashes:\n",
+    "    if i < 0:\n",
+    "        saruman_victories = saruman_victories + 1\n",
+    "    elif i > 0:\n",
+    "        gandalf_victories = gandalf_victories + 1\n",
+    "\n",
+    "if saruman_victories > gandalf_victories:\n",
+    "    print(\"Saruman wins\")\n",
+    "elif saruman_victories < gandalf_victories:\n",
+    "    print(\"Gandalf wins\")\n",
+    "else:\n",
+    "    print(\"Tie\")\n"
    ]
   },
   {
@@ -144,24 +169,66 @@
    "outputs": [],
    "source": [
     "# Assign spell power lists to variables\n",
-    "\n"
+    "gandalf_power = []\n",
+    "saruman_power = []\n",
+    "\n",
+    "for i in gandalf:\n",
+    "    power = POWER[i]\n",
+    "    gandalf_power.append(power)\n",
+    "    \n",
+    "for i in saruman:\n",
+    "    power = POWER[i]\n",
+    "    saruman_power.append(power)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf Wins\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
     "\n",
     "\n",
     "# Execution of spell clashes\n",
-    "\n",
+    "spell_clashes=[]\n",
+    "for i in range(0,len(gandalf_power)):\n",
+    "    clash_result = gandalf_power[i] - saruman_power[i]\n",
+    "    spell_clashes.append(clash_result)\n",
     "\n",
     "\n",
     "# check for 3 wins in a row\n",
+    "saruman_results = []\n",
+    "gandalf_results = []\n",
+    "for i in spell_clashes:\n",
+    "    if i < 0:\n",
+    "        saruman_results.append(1)\n",
+    "        gandalf_results.append(0)\n",
+    "    elif i > 0:\n",
+    "        gandalf_results.append(1)\n",
+    "        saruman_results.append(0)\n",
     "\n",
+    "gandalf_pontuation = 0\n",
+    "saruman_pontuation = 0\n",
+    "for i in gandalf_results:\n",
+    "    if i == 1:\n",
+    "        gandalf_pontuation = gandalf_pontuation + 1\n",
+    "        saruman_pontuation = 0\n",
+    "        if gandalf_pontuation == 3:\n",
+    "            print(\"Gandalf Wins\")\n",
+    "    elif i == 0:\n",
+    "        gandalf_pontuation = 0\n",
+    "        saruman_pontuation = saruman_pontuation + 1\n",
+    "        if saruman_pontuation == 3:\n",
+    "            print(\"Saruman Wins\")\n",
     "\n",
     "# check the winner\n"
    ]
@@ -170,21 +237,69 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35.0\n",
+      "30.5\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Average of each of the spell lists.\n",
-    "\n"
+    "average_gandalf_power=sum(gandalf_power)/len(gandalf_power)\n",
+    "print(average_gandalf_power)\n",
+    "average_saruman_power=sum(saruman_power)/len(saruman_power)\n",
+    "print(average_saruman_power)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.881943016134134\n",
+      "15.56438241627338\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Standard deviation of each of the spell lists.\n",
-    "\n"
+    "\n",
+    "squared_deviations_gandalf=[]\n",
+    "for i in gandalf_power:\n",
+    "    squared_deviation=(i - average_gandalf_power)**2\n",
+    "    squared_deviations_gandalf.append(squared_deviation)\n",
+    "standard_deviation_gandalf = (sum(squared_deviations_gandalf)/len(squared_deviations_gandalf))**0.5\n",
+    "print(standard_deviation_gandalf)\n",
+    "\n",
+    "squared_deviations_saruman=[]\n",
+    "for i in saruman_power:\n",
+    "    squared_deviation=(i - average_saruman_power)**2\n",
+    "    squared_deviations_saruman.append(squared_deviation)\n",
+    "standard_deviation_saruman = (sum(squared_deviations_saruman)/len(squared_deviations_saruman))**0.5\n",
+    "print(standard_deviation_saruman)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -210,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
