--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -69,9 +69,43 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "6\n",
+      "2\n",
+      "2\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Calculate how many arrows have fallen in each quadrant.\n",
+    "quadrant1 = 0\n",
+    "quadrant2 = 0\n",
+    "quadrant3 = 0\n",
+    "quadrant4 = 0\n",
+    "between_quadrants=0\n",
+    "for i in points:\n",
+    "    if (i[0] > 0) and (i[1] > 0):\n",
+    "        quadrant1 = quadrant1 + 1\n",
+    "    elif (i[0] < 0) and (i[1] > 0):\n",
+    "        quadrant2 = quadrant2 + 1\n",
+    "    elif (i[0] < 0) and (i[1] < 0):\n",
+    "        quadrant3 = quadrant3 + 1\n",
+    "    elif (i[0]>0) and (i[1]<0):\n",
+    "        quadrant4 = quadrant4 + 1\n",
+    "    elif (i[0]==0) or (i[1]==0):\n",
+    "        between_quadrants=between_quadrants+1\n",
+    "print(quadrant1)\n",
+    "print(quadrant2)\n",
+    "print(quadrant3)\n",
+    "print(quadrant4)\n",
+    "print(between_quadrants)\n",
+    "\n",
     "\n"
    ]
   },
@@ -79,10 +113,25 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Find the point closest to the center. Calculate its distance to the center\n",
     "# Defining a function that calculates the distance to the center can help.\n",
+    "distances=[]\n",
+    "for i in points:\n",
+    "    distance = ((i[0]** 2) + (i[1]** 2))** 0.5\n",
+    "    distances.append(distance)\n",
+    "    \n",
+    "print(points[distances.index(min(distances))])\n",
+    "\n",
     "\n"
    ]
   },
@@ -90,11 +139,24 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. If the target has a radius of 9, calculate the number of arrows that \n",
     "# must be picked up in the forest.\n",
-    "\n"
+    "\n",
+    "outside_arrows=0\n",
+    "for i in distances:\n",
+    "    if i > 9:\n",
+    "        outside_arrows=outside_arrows+1\n",
+    "print(outside_arrows)"
    ]
   },
   {
@@ -121,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
