first part of rock-paper-scissors

--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -85,9 +85,9 @@
     "# Print the result based on the winner.\n",
     "for i in spell_clashes:\n",
     "    if i < 0:\n",
-    "        saruman_victories = saruman_victories + 1\n",
+    "        saruman_victories += 1\n",
     "    elif i > 0:\n",
-    "        gandalf_victories = gandalf_victories + 1\n",
+    "        gandalf_victories += 1\n",
     "\n",
     "if saruman_victories > gandalf_victories:\n",
     "    print(\"Saruman wins\")\n",
