--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -155,7 +155,7 @@
     "outside_arrows=0\n",
     "for i in distances:\n",
     "    if i > 9:\n",
-    "        outside_arrows=outside_arrows+1\n",
+    "        outside_arrows += 1\n",
     "print(outside_arrows)"
    ]
   },
