--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -39,31 +39,62 @@
     "\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
-    "maximum_games=10\n",
+    "maximum_games=5\n",
     "\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
-    "games_win=6\n",
+    "games_win=int(maximum_games/2)+1\n",
     "\n",
     "\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
     "def machine_play():\n",
-    "    print(random.choice(game))\n",
+    "    return random.choice(game)\n",
     "\n",
     "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
-    "\n",
+    "def ask_choice():\n",
+    "    user_choice=input(\"What is your play?\")\n",
+    "    while (user_choice != game[0]) and (user_choice != game[1]) and (user_choice != game[2]):\n",
+    "        user_choice = input(\"The answer is not valid, choose one of the following: scissors, stone or paper:\")\n",
+    "        print (\"ok\")\n",
+    "    return user_choice\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
+    "machine=0\n",
+    "user=0\n",
     "\n",
-    "    \n",
+    "def combat():\n",
+    "    global machine\n",
+    "    machine = machine_play()\n",
+    "    global user\n",
+    "    user = ask_choice()\n",
+    "    if ((user == game[0]) and (machine == game[2])) or ((user == game[1]) and (machine == game[0])) or (\n",
+    "            (user == game[2]) and (machine == game[1])):\n",
+    "        return (2)\n",
+    "    elif ((user == game[0]) and (machine == game[0])) or ((user == game[1]) and (machine == game[1])) or (\n",
+    "            (user == game[2]) and (machine == game[2])):\n",
+    "        return (0)\n",
+    "    else:\n",
+    "        return (1)\n",
+    "        \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
+    "user_pontuation=0\n",
+    "machine_pontuation=0\n",
     "\n",
+    "def game_play ():\n",
+    "    play_result=combat()\n",
+    "    if play_result==2:\n",
+    "        global user_pontuation\n",
+    "        user_pontuation +=1\n",
+    "    if play_result==1:\n",
+    "        global machine_pontuation\n",
+    "        machine_pontuation +=1\n",
+    "    print(\"User played\", user, \"and machine played\", machine, \". Total pontuation is\", user_pontuation, \" for user, and\", machine_pontuation, \"for machine\")\n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
     "\n",
@@ -73,10 +104,19 @@
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
     "\n",
-    "\n",
+    "def full_game():\n",
+    "    global machine_pontuation\n",
+    "    global user_pontuation\n",
+    "    while (machine_pontuation<games_win) and (user_pontuation<games_win):\n",
+    "        game_play()\n",
+    "    if machine_pontuation == games_win:\n",
+    "        print (\"Machine has won the game.\")\n",
+    "    elif user_pontuation == games_win:\n",
+    "        print (\"User has won the game.\")\n",
+    "    \n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "  "
+    "def winner()"
    ]
   },
   {
