first part of rock-paper-scissors

--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -27,7 +27,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-b34afd637ba9>, line 88)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-b34afd637ba9>\"\u001b[0;36m, line \u001b[0;32m88\u001b[0m\n\u001b[0;31m    def winner()\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
@@ -115,8 +124,7 @@
     "        print (\"User has won the game.\")\n",
     "    \n",
     "    \n",
-    "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "def winner()"
+    "# Print by console the winner of the game based on who has more accumulated wins"
    ]
   },
   {
