--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -64,8 +64,8 @@
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
-    "machine=0\n",
-    "user=0\n",
+    "machine=\"\"\n",
+    "user=\"\"\n",
     "\n",
     "def combat():\n",
     "    global machine\n",
