--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -193,8 +193,12 @@
    "outputs": [],
    "source": [
     "# 1. We want the hours (not the temperatures) whose temperature exceeds 70ºC\n",
-    "hours_above_70=len(higher_70)\n",
-    "\n"
+    "hours_above_70=[]\n",
+    "index=0\n",
+    "for i in temperatures_C:\n",
+    "    if i>70:\n",
+    "        hours_above_70.append(index)\n",
+    "    index +=1\n"
    ]
   },
   {
