Adding the duel exercise

--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -91,13 +91,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17.996969441850734"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
+    "well = 125\n",
+    "advance_cm = [30,21,33,77,44,45,23,45,12,34,55]\n",
+    "night_retreat = -20\n",
+    "whole_days = []\n",
+    "whole_day_cm = advance_cm[0] + night_retreat\n",
+    "whole_days.append(whole_day_cm)\n",
+    "whole_days\n",
     "\n",
+    "\n",
+    "    \n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
     "\n",
@@ -111,13 +131,15 @@
     "\n",
     "# What is its maximum displacement in a day? And its minimum?\n",
     "\n",
-    "\n",
+    "max(advance_cm)\n",
+    "min(advance_cm)\n",
     "\n",
     "# What is its average progress?\n",
-    "\n",
+    "sum(advance_cm)/len(advance_cm)\n",
     "\n",
     "# What is the standard deviation of your displacement during the day?\n",
-    "\n"
+    "import statistics\n",
+    "statistics.stdev(advance_cm)\n"
    ]
   },
   {
