--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -33,28 +33,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assign spell power lists to variables\n",
     "\n",
     "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
-    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]"
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 0, 1, 1, 0, 1, 1, 1]\n",
+      "[1, 1, 0, 1, 0, 0, 1, 0, 0, 0]\n",
+      "Gandalf wins 6 clashes\n"
+     ]
+    }
+   ],
    "source": [
-    "# Assign 0 to each variable that stores the victories\n"
+    "# Assign 0 to each variable that stores the victories\n",
+    "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "\n",
+    "# 1 for win, 0 for loss;\n",
+    "win_g = []\n",
+    "win_s = []\n",
+    "for i,j in zip(gandalf, saruman):\n",
+    "    if i > j:\n",
+    "        win_g.append(1)\n",
+    "        win_s.append(0)\n",
+    "    elif i ==j:\n",
+    "        win_g.append(0)\n",
+    "        win_s.append(0)\n",
+    "    elif i < j:\n",
+    "        win_g.append(0)\n",
+    "        win_s.append(1)\n",
+    "print(win_g)\n",
+    "print(win_s)\n",
+    "    \n",
+    "if sum(win_g) > sum(win_s):\n",
+    "    print(\"Gandalf wins\", sum(win_g), \"clashes\")\n",
+    "elif sum(win_g)< sum(win_s):\n",
+    "    print(\"Saruman wins\", sum(win_s), \"clashes\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,11 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
+    "\n",
+    "\n",
+    "    \n",
     "# Print the result based on the winner.\n",
     "\n"
    ]
@@ -210,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
